<resources>
    <string name="app_name">BetBuddy</string>
    <string name="title_home">BetBuddy</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="this_is_definitely_not_home_fragment">This is definitely not Home Fragment</string>
    <string name="your_best_friend_in_betting">Your Best Friend in Betting</string>
    <string name="track_history">Track History</string>
    <string name="view_stats">View Stats</string>
    <string name="welcome_to_BetBuddy">Welcome to BetBuddy</string>
    <string name="notDone"></string>
    <string name="addBetError">Error: One or more boxes empty</string>
    <string name="presetOdds"></string>
    <string name="earningsBet"></string>
    <string name="empty"></string>
</resources>