<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".add_bet">

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="54dp"
        android:layout_marginEnd="54dp"
        android:layout_marginBottom="35dp"
        android:backgroundTint="?android:textColorPrimary"
        android:onClick="submitButtonHandler"
        android:text="SUBMIT"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/betWon" />

    <Button
        android:id="@+id/back"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="54dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="?android:textColorPrimary"
        android:text="&lt;"
        app:layout_constraintBottom_toTopOf="@+id/title"
        app:layout_constraintEnd_toStartOf="@+id/notDone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title"
        android:layout_width="442dp"
        android:layout_height="65dp"
        android:gravity="center"
        android:text="Add New Bet"
        android:textColor="?android:textColorPrimary"
        android:textSize="40sp"
        android:background="?attr/colorSecondaryVariant"
        app:layout_constraintBottom_toTopOf="@+id/sportsbook"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back" />

    <EditText
        android:id="@+id/teamTwo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="54dp"
        android:layout_marginEnd="54dp"
        android:layout_marginBottom="70dp"
        android:ems="10"
        android:hint="Team Two"
        app:layout_constraintBottom_toTopOf="@+id/odds"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/betSelected" />

    <EditText
        android:id="@+id/teamOne"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginStart="54dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="54dp"
        android:layout_marginBottom="60dp"
        android:ems="10"
        android:hint="Team One"
        app:layout_constraintBottom_toBottomOf="@+id/teamTwo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/sportsbook" />

    <TextView
        android:id="@+id/betType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="39dp"
        android:layout_marginBottom="55dp"
        android:text="Click Bet Type"
        android:textColor="?android:textColorPrimary"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/Group1"
        app:layout_constraintStart_toStartOf="@+id/Group1" />

    <RadioGroup
        android:id="@+id/Group1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="45dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/odds"
        app:layout_constraintStart_toStartOf="@+id/teamTwo">

        <RadioButton
            android:id="@+id/betSpread"
            android:layout_width="98dp"
            android:layout_height="67dp"
            android:layout_marginTop="0dp"
            android:onClick="radioButtonHandler"
            android:text="Spread"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.111"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioButton
            android:id="@+id/betMoneyline"
            android:layout_width="120dp"
            android:layout_height="69dp"
            android:layout_marginTop="0dp"
            android:onClick="radioButtonHandler"
            android:text="Moneyline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.45"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioButton
            android:id="@+id/OverUnder"
            android:layout_width="86dp"
            android:layout_height="63dp"
            android:layout_marginTop="0dp"
            android:onClick="radioButtonHandler"
            android:text="O/U"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.738"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </RadioGroup>

    <EditText
        android:id="@+id/odds"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="54dp"
        android:layout_marginEnd="54dp"
        android:ems="10"
        android:hint="Odds"
        android:text="@string/presetOdds"
        app:layout_constraintBottom_toTopOf="@+id/amountBet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/teamTwo" />

    <EditText
        android:id="@+id/amountBet"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="54dp"
        android:layout_marginEnd="54dp"
        android:ems="10"
        android:hint="Bet Amount"
        app:layout_constraintBottom_toTopOf="@+id/betWon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/odds" />

    <EditText
        android:id="@+id/earningsBet"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginStart="54dp"
        android:ems="10"
        android:hint="Bet Earnings"
        android:text="@string/earningsBet"
        app:layout_constraintBaseline_toBaselineOf="@+id/betWon"
        app:layout_constraintEnd_toStartOf="@+id/betWon"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/sportsbook"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="54dp"
        android:layout_marginEnd="54dp"
        android:layout_marginBottom="0dp"
        android:ems="10"
        android:hint="Sportsbook"
        app:layout_constraintBottom_toTopOf="@+id/betSelected"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/betSelected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="42dp"
        android:text=""
        android:textColor="?android:textColorPrimary"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/teamTwo"
        app:layout_constraintEnd_toEndOf="@+id/betType"
        app:layout_constraintTop_toBottomOf="@+id/sportsbook" />

    <RadioButton
        android:id="@+id/betWon"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="35dp"
        android:onClick="radioButtonHandler"
        android:text="Won?"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/earningsBet"
        app:layout_constraintTop_toBottomOf="@+id/amountBet" />

    <TextView
        android:id="@+id/notDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="258dp"
        android:layout_marginBottom="8dp"
        android:text="@string/notDone"
        android:textColor="#000000"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="@+id/back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/back" />

</androidx.constraintlayout.widget.ConstraintLayout>